TEST_PROGRAMS/VALID/maxim_gorshkov/prog2.min
# Valid Program 2
# Maxim Gorshkov
# 260397155
#
# Reads an integer to calculate the factorial.

var upperLimit : int;
var temp : int;

read upperLimit;

while upperLimit do
	temp = temp * upperLimit;
	upperLimit = upperLimit - 1;
done

print max;
