TEST_PROGRAMS/INVALID/maxim_gorshkov/invalid3.min
# Invalid Program 3
# Maxim Gorshkov
# 260397155
#
# Error: While loop is missing the done keyword.

var x : int;
var y : float;

while x do
   y = y * 2.0;
   x = x - 1;
